Updated for 2.0.6 stable version (hopefully) Fixes: - Active tab count (not negative) - Fixed status bar name - Fixes the applications page not loading - Fixes the documents to show the new pdf page (not showing old documents page because you cannot edit it in real Jobmine)
git-svn-id: https://jobmine-plus.googlecode.com/svn/trunk@213 61ae86f6-b183-4c0e-610b-53ec448a0a34

--- a/resource/scripts/update.css
+++ b/resource/scripts/update.css
@@ -1,6 +1,6 @@
 /**
  *    Used for updating Jobmine Plus via css
  */
-body:not(.v_2_0_5) #jbnplsUpdate{
+body:not(.v_2_0_6) #jbnplsUpdate{
    display : block !important; 
 }
